Soluciones en el index para los links

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <h2>F152T02</h2>
 
     <ol>
-<li><a href="/./PRACTICA/ejercicio01.html">Ejercicio01</a></li>
-<li><a href="/./PRACTICA/ejercicio02.html">Ejercicio02</a></li>
-<li><a href="/./PRACTICA/ejercicio03.html">Ejercicio03</a></li>
-<li><a href="/./PRACTICA/ejercicio04.html">Ejercicio04</a></li>
-<li><a href="/./PRACTICA/ejercicio05.html">Ejercicio05</a></li>
-<li><a href="/./PRACTICA/ejercicio06.html">Ejercicio06</a></li>
+<li><a href="./PRACTICA/ejercicio01.html">Ejercicio01</a></li>
+<li><a href="./PRACTICA/ejercicio02.html">Ejercicio02</a></li>
+<li><a href="./PRACTICA/ejercicio03.html">Ejercicio03</a></li>
+<li><a href="./PRACTICA/ejercicio04.html">Ejercicio04</a></li>
+<li><a href="./PRACTICA/ejercicio05.html">Ejercicio05</a></li>
+<li><a href="./PRACTICA/ejercicio06.html">Ejercicio06</a></li>
 
     </ol>
     
