--- a/PRACTICA/ejercicio01.html
+++ b/PRACTICA/ejercicio01.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/./RECURSOS/ejercicio01.css">
+    <link rel="stylesheet" href="../RECURSOS/ejercicio01.css">
     <title>Ejercicio01</title>
 </head>
 
